--- a/ThesisProject/Views/Home/Login.cshtml
+++ b/ThesisProject/Views/Home/Login.cshtml
@@ -28,7 +28,10 @@
         </form>
         <div class="register">
             <h4>Don't have an account yet?</h4>
-            <h5>Sign up</h5>
+            <a class="signin" asp-controller="Home" asp-action="Registration">
+                <h5>Sign up</h5>
+            </a>
+            
         </div>
     </div>
     <div class="image-container">
