--- a/ThesisProject/wwwroot/css/LoginStyle.css
+++ b/ThesisProject/wwwroot/css/LoginStyle.css
@@ -9,6 +9,10 @@
 :root {
     --light-blue: #c1e3fe;
     --light-pink: #f5c0e0;
+    --tran-02: all 0.2s ease;
+    --tran-03: all 0.3s ease;
+    --tran-04: all 0.3s ease;
+    --tran-05: all 0.3s ease;
 }
 
 .container{
@@ -36,6 +40,7 @@
 
 h1{
     margin-bottom:2%;
+    text-align:center;
 }
 .form{  
 
@@ -95,10 +100,15 @@ justify-content:center}
     .submit-btn:hover {
         transform: scale(1.05);
         cursor: pointer;
+        transition:var(--tran-04);
     }
 
 .register{
-    text-align:center;
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
 }
 h4{
     margin-top:10%;
@@ -107,6 +117,24 @@ h5{
     color:var(--light-pink);
     cursor:pointer;
 }
+
+.radios {
+    width:100%;
+    display: flex;
+    padding-left: 7%;
+    padding-right: 7%;
+    justify-content: space-evenly;
+}
+.signin{
+    text-decoration:none;
+}
+
+.signin:hover h5{
+    color:var(--light-blue);
+    transition:var(--tran-04);
+}
+
+
 .error{
     display:none;
 }
