--- a/ThesisProject/wwwroot/css/LoginStyle.css
+++ b/ThesisProject/wwwroot/css/LoginStyle.css
@@ -95,6 +95,7 @@ justify-content:center}
     transition:all 0.3s;
     background-color:#c1e3fe;
     border:none;
+    font-size:15px;
 
 }
     .submit-btn:hover {
@@ -116,6 +117,8 @@ h4{
 h5{
     color:var(--light-pink);
     cursor:pointer;
+    font-weight:400;
+    font-size:15px;
 }
 
 .radios {
