--- a/ThesisProject/wwwroot/css/MoodsStyle.css
+++ b/ThesisProject/wwwroot/css/MoodsStyle.css
@@ -75,6 +75,7 @@
         display:flex;
         align-items:center;
         justify-content:center;  
+        flex-direction:column;
         
     }
      .left-container form{
@@ -90,36 +91,44 @@
         color:#FFF;
     }
 
-    .left-form-up {
-        background-color: var(--yellow);
-    }
+.left-form-up {
+    background-color: #F7E1DF;
+}
 
-    .left-form-down{
-        background-color:var(--green);
-    }
+.left-form-down {
+    background-color: #F2C469;
+}
 
-    .up1{
-        background-color:var(--light-blue);
+.up1 {
+    background-color: #CDDBE6;
+    display:flex;
+    flex-direction:column;
+}
 
-    }
-    .up2 {
-        background-color: var(--primary-color);
-    }
-    .up3 {
-        background-color: var(--light-pink);
-    }
+img {
+    max-width: 80%;
+    max-height: 80%;
+    height:auto;
+}
+.up2 {
+    background-color: #D9E4C6;
+}
+.up3 {
+    background-color: #D7EDE4;
+}
 
-    .down1 {
-        background-color: var(--text-color);
-    }
+.down1 {
+    background-color: #F2ECD9;
+}
 .down2 {
-    background-color: var(--light-blue);
+    background-color: #F2ECD9;
 }
 
 
 .right-container {
     display: flex;
     flex-direction: column;
+    height:100%;
 }
     .right-container form {
         margin-bottom: 1%;
@@ -129,6 +138,7 @@
     .right-container .right-upper,.right-down{
         display:flex;
         flex-direction:row;
+        height:100%;
     }
 
     .right-upper form{
