UI changes + started homepage

--- a/ThesisProject/Views/Home/Favorites.cshtml
+++ b/ThesisProject/Views/Home/Favorites.cshtml
@@ -26,10 +26,7 @@
         </header>
         <div class="menu-bar">
             <div class="menu">
-                <li class="search-box">
-                    <i class='bx bx-search icon'></i>
-                    <input type="text" placeholder="Search...">
-                </li>
+                
                 <ul class="menu-links">
                     <li class="nav-link">
                         <a class="homebtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Homepage">
@@ -64,16 +61,7 @@
                         <span class="text nav-text">Logout</span>
                     </a>
                 </li>
-                <li class="mode">
-                    <div class="sun-moon">
-                        <i class='bx bx-moon icon moon'></i>
-                        <i class='bx bx-sun icon sun'></i>
-                    </div>
-                    <span class="mode-text text">Dark mode</span>
-                    <div class="toggle-switch">
-                        <span class="switch"></span>
-                    </div>
-                </li>
+              
 
             </div>
         </div>
@@ -86,7 +74,9 @@
             <div class="text title">Your favorites</div>
             <div class="right-corner">
                 <img src="~/Resources/icons8-male-user-24 (1).png" />
-                <div class="smalltext username ">@ViewBag.username </div>
+                <a class="profbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Profile">
+                    <span class="smalltext username ">@ViewBag.username</span>
+                </a>
             </div>
         </div>
         <div class="main">
