--- a/ThesisProject/wwwroot/css/ProfileStyle.css
+++ b/ThesisProject/wwwroot/css/ProfileStyle.css
@@ -38,6 +38,13 @@
     width: 150px;
     justify-content: space-between;
 }
+    .right-corner img {
+        margin-right: 3%;
+    }
+.profbtn {
+    text-decoration: none;
+    color: var(--text-color);
+}
 .main {
     width: 100%;
     height: 100%;
