--- a/ThesisProject/wwwroot/css/HomepageStyle.css
+++ b/ThesisProject/wwwroot/css/HomepageStyle.css
@@ -24,6 +24,12 @@
     flex-direction:row;
 
 }
+.home {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
 .right-corner{
     position: absolute;
@@ -32,10 +38,17 @@
     font-size: 15px;
     display:flex;
     width:150px;
-    justify-content:space-between;
+    justify-content:center;
 
 }
+    .right-corner img{
+        margin-right:3%;
+    }
 
+.profbtn {
+    text-decoration: none;
+    color: var(--text-color);
+}
 .song-managing{
     position:absolute;
     width:97%;
@@ -67,3 +80,32 @@
     display:none;
 }
 
+.main{
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    height:100%;
+    padding-left:6%;
+    padding-right:6%;
+    margin-bottom:2%;
+}
+
+    .main .left{
+        width:100%;
+        height:100%;
+        
+    }
+    .main .right {
+        width: 100%;
+        background-color: #F7E1DF;
+        border-radius:20px;
+        padding:4%;
+    }
+
+    .right table{
+        width:100%;
+    }
+
+        .right tr{
+            padding:2%;
+        }
