--- a/ThesisProject/wwwroot/css/PlaylistsStyle.css
+++ b/ThesisProject/wwwroot/css/PlaylistsStyle.css
@@ -4,7 +4,7 @@
     --body-color: #fff;
     --sidebar-color: #FFF;
     --primary-color: #F7E1DF;
-    --primary-color-light: #FAE4A6;
+    --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
     --light-text-color: #white;
@@ -30,15 +30,21 @@
     font-size: 15px;
     display: flex;
     width: 150px;
-    justify-content: space-between;
+    justify-content: center;
 }
-.home{
-    height:100%;
-    display:flex;
-    flex-direction:column;
-    width:100%;
+.right-corner img{
+    margin-right:3%;
+}
 
-
+.profbtn {
+    text-decoration: none;
+    color: var(--text-color);
+}
+.home {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-x:clip;
 }
 
 .main {
@@ -48,8 +54,9 @@
     flex-direction: row;
     padding-left: 6%;
     padding-right: 6%;
-    padding-top:3%;
-    padding-bottom:2%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    
 }
 
 table {
@@ -57,14 +64,23 @@ table {
     border-collapse: collapse;
 }
 
-.song-list{
-    width:100%;   
-    
+.song-list {
+    width: 100%;
+    background-image: url('/Resources/output-onlinepngtools.png');
+    background-repeat: no-repeat;
+    background-size:80% 90%;
+    background-position-x: center;
+    background-position-y: bottom;
 }
 .song td{
    border:none;
    padding:0.07%;
-   max-width:100px;
+}
+
+.song .play-icon{
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
 .sname {
@@ -85,9 +101,9 @@ th:last-child {
 }
 
 .song:hover {
-    transform: scale(1.01);
-    background-color: var(--primary-color-light);
-    transition:var(--tran-05);
+    background-color: #FAE4A6;
+    transition: var(--tran-04);
+    opacity:0.8;
 }
 
 .song-list .text{
