--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model (List<SongModel>,LoginModel)
+
 @section Styles{
     <link rel="stylesheet" href="~/css/HomepageStyle.css" />
     <link rel="stylesheet" href="~/css/MenuStyle.css" />
@@ -78,35 +79,58 @@
         </div>
         <div class="main">
             <div class="left">
-
-            </div>
-            <div class="right">
-                @if (ViewBag.mymodel != null)
-                {
-                    <div>
-                        <h3>Your last blasts</h3>
-                    </div>
-                    int i = 1;
-                    <table>
-                        <thead>
-                            <tr class="thead">
-                                <td>Songname</td>
-                                <td>Mood</td>
-                            </tr>
-                        </thead>
-                    @foreach (var song in ViewBag.mymodel as List<SongModel>)
+                <div class="welcome">
+                    
+                    <h2 class="welcome-msg">
+                        We are so happy you're back
+                        <img src="~/Images/Waving Hand Emoji.png" />
+                    </h2>
+                </div> 
+                <div class="right">
+                    @if (Model.Item1 != null)
                     {
-                        <tr class="song">
-                            <td>@i. @song.songname</td>    
-                            <td>@song.mood</td>
-                        </tr>
+                        <div class="top">
+                            <h2>Your top blasts</h2>
+                        </div>
+                        int i = 1;
+                        <table>
 
-                            i++;
-                        }
-                    </table>
-                }
-                
+                            @foreach (var song in Model.Item1)
+                            {
+                                <tr class="song">
+                                    <td class="song-title">@i. @song.songname</td>
+                                    @{
+                                        string mood = song.mood.Substring(0, 1).ToUpper() + song.mood.Substring(1);
+                                    }
+
+                                    <td style="text-align:center">@mood</td>
+                                </tr>
+
+                                i++;
+                            }
+                        </table>
+                    }
+                </div>
             </div>
+            
+
+                <div class="decoration">
+                    <div class="down-text">
+                        <h2>What mood are you in today?</h2>
+                        <h3><i class="you">You</i> choose</h3>
+                    </div>
+                   
+                    <div class="video">
+                        <video autoplay loop>
+                            <source src="/Images/Disc jockey (1).mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    
+                </div>
+              
+                
+           
         </div>            
        
     </section>
