--- a/ThesisProject/wwwroot/css/PlaylistsStyle.css
+++ b/ThesisProject/wwwroot/css/PlaylistsStyle.css
@@ -44,7 +44,10 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow-x:clip;
+    overflow-x: clip;
+    background-image: url('/Images/greenshape.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .main {
@@ -66,11 +69,8 @@ table {
 
 .song-list {
     width: 100%;
-    background-image: url('/Resources/output-onlinepngtools.png');
-    background-repeat: no-repeat;
-    background-size:80% 90%;
-    background-position-x: center;
-    background-position-y: bottom;
+   
+   
 }
 .song td{
    border:none;
