login + homepage ui changes

--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -117,12 +117,12 @@
                 <div class="decoration">
                     <div class="down-text">
                         <h2>What mood are you in today?</h2>
-                        <h3><i class="you">You</i> choose</h3>
+                    <h3><span class="you">You</span> choose</h3>
                     </div>
                    
                     <div class="video">
                         <video autoplay loop>
-                            <source src="/Images/Disc jockey (1).mp4" type="video/mp4">
+                            <source src="/Images/Playlist.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
