--- a/ThesisProject/Views/Home/Login.cshtml
+++ b/ThesisProject/Views/Home/Login.cshtml
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="image-container">
-        <img src="@Url.Content("~/Images/undraw_happy_music_g6wc-removebg.png")" class="image" />
+        <img src="@Url.Content("~/Images/own-bird.png")" class="image" />
         <h2>Here, <i>you</i> choose your mood</h2>
     </div>
 </div>
